tests/examples/good/misc/good005.lat
int main() {
    int a, b = 7, c;
    a = 4 * 3;
    c = a + b;
    c = a - b;
    c = a * b;
    c = a / b;
    c = a % b;
    return 0;
}
