tests/examples/bad/function_var_redeclaration.lat
int main() {
    return 0;
}

int f(int a, int b) {
    int a;
    return 1;
}